# rules_ts_667

./: .gitignore  BUILD.bazel  MODULE.bazel  foo.proto  package.json  pnpm-lock.yaml  rules_js.system_bsdtar.patch  rules_ts.667.patch
