load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:proto.bzl", "ts_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

npm_link_all_packages()

proto_library(
    name = "foo_proto",
    srcs = [
        "foo.proto",
    ],
    visibility = ["//visibility:public"],
)

ts_proto_library(
    name = "foo_ts_pb",
    node_modules = "//:node_modules",
    proto = ":foo_proto",
    proto_srcs = ["foo.proto"],
)
